fix [skip skia]

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,5 @@
 [target.x86_64-pc-windows-msvc]
-rustflags = ["-C", "link-args=/NODEFAULTLIB:libcmt.lib", "-C", "target-feature=+crt-static"]
+rustflags = ["-C", "target-feature=+crt-static"]
 
 [target.aarch64-apple-darwin]
 rustflags = ["-C", "target-cpu=apple-a14"]
