--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -11,8 +11,5 @@ rustflags = ["-C", "target-cpu=cortex-a57"]
 rustflags = ["-C", "target-cpu=cortex-a7"]
 
 [target.aarch64-unknown-linux-musl]
-linker = "aarch64-linux-musl-gcc"
-rustflags = [
-  "-C",
-  "target-cpu=cortex-a57",
-]
+linker    = "aarch64-linux-musl-gcc"
+rustflags = ["-C", "target-cpu=cortex-a57"]
