--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,27 +8,23 @@ version = "0.1.0"
 crate-type = ["cdylib"]
 
 [dependencies]
-anyhow = "1"
-base64 = "0.22"
-cssparser = "0.29"
-infer = "0.16"
-libavif = { version = "0.14", default-features = false, features = [
-  "codec-aom",
-] }
-napi = { version = "2", default-features = false, features = [
-  "napi3",
-  "serde-json",
-] }
-napi-derive = { version = "2", default-features = false }
-nom = "7"
-num_cpus = "1"
-once_cell = "1"
-regex = "1"
-rgb = "0.8"
-serde = "1"
+anyhow       = "1"
+base64       = "0.22"
+base64-simd  = "0.8"
+cssparser    = "0.29"
+infer        = "0.16"
+libavif      = { version = "0.14", default-features = false, features = ["codec-aom"] }
+napi         = { version = "3.0.0-alpha.8", default-features = false, features = ["napi3", "serde-json"] }
+napi-derive  = { version = "3.0.0-alpha.7", default-features = false }
+nom          = "7"
+num_cpus     = "1"
+once_cell    = "1"
+regex        = "1"
+rgb          = "0.8"
+serde        = "1"
 serde_derive = "1"
-serde_json = "1"
-thiserror = "1"
+serde_json   = "1"
+thiserror    = "1"
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 mimalloc = "0.1"
@@ -41,6 +37,6 @@ cc         = "1"
 napi-build = "2"
 
 [profile.release]
-lto = true
 codegen-units = 1
-strip = "symbols"
+lto           = true
+strip         = "symbols"
