--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "aarch64-unknown-linux-gnu",
         "aarch64-unknown-linux-musl",
         "aarch64-apple-darwin",
-        "aarch64-linux-android"
+        "aarch64-linux-android",
+        "riscv64-unknown-linux-gnu"
       ]
     }
   },
