--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -9,8 +9,7 @@
   ],
   "main": "skia.win32-x64-msvc.node",
   "files": [
-    "skia.win32-x64-msvc.node",
-    "icudtl.dat"
+    "skia.win32-x64-msvc.node"
   ],
   "description": "Canvas for Node.js with skia backend",
   "keywords": [
