--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -136,7 +136,7 @@ jobs:
               sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-18/lib /usr/arm-linux-gnueabihf/lib/llvm-18/lib
               sudo docker cp ubuntu-jammy-armv7:/usr/lib/llvm-18/include /usr/arm-linux-gnueabihf/lib/llvm-18/include
               docker stop ubuntu-jammy-armv7
-            build: yarn build --target armv7-unknown-linux-gnueabihf --zig --zig-link-only --zig-abi-suffix=2.18
+            build: yarn build --target armv7-unknown-linux-gnueabihf --use-napi-cross
           - host: ubuntu-latest
             target: 'aarch64-linux-android'
             downloadTarget: 'aarch64-linux-android'
@@ -525,67 +525,6 @@ jobs:
           name: failure-images-aarch64-unknown-linux-musl-lts
           path: __test__/failure/**
 
-  test-linux-arm-gnueabihf-binding:
-    name: Test bindings on armv7-unknown-linux-gnueabihf - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        node: ['18', '20', '22']
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download Apple Emoji font
-        uses: robinraju/release-downloader@v1
-        with:
-          repository: 'PoomSmart/EmojiLibrary'
-          tag: '0.15.4'
-          fileName: AppleColorEmoji@2x.ttf
-          token: ${{ secrets.GITHUB_TOKEN }}
-          out-file-path: __test__/fonts/
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: bindings-armv7-unknown-linux-gnueabihf
-          path: .
-
-      - name: List packages
-        run: ls -R .
-        shell: bash
-
-      - name: Install dependencies
-        run: |
-          yarn config set supportedArchitectures.cpu "arm"
-          yarn install --immutable --mode=skip-build
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm
-
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-
-      - name: Setup and run tests
-        uses: addnab/docker-run-action@v3
-        with:
-          image: node:${{ matrix.node }}-bullseye-slim
-          options: '--platform linux/arm/v7 -v ${{ github.workspace }}:/skia -w /skia'
-          run: |
-            set -e && \
-            yarn test:ci && \
-            ls -la
-
-      - name: Test failed
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: failure-images-armv7-unknown-linux-gnueabihf-${{ matrix.node }}
-          path: __test__/failure/**
-
   rust-test:
     name: stable - macOS - cargo - test
     runs-on: macos-latest
@@ -658,7 +597,6 @@ jobs:
       - test-linux-x64-musl-binding
       - test-linux-aarch64-gnu-binding
       - test-linux-aarch64-musl-binding
-      - test-linux-arm-gnueabihf-binding
       - test-macOS-windows-binding
 
     steps:
