--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -92,15 +92,12 @@ jobs:
             docker: ghcr.io/brooooooklyn/canvas/musl-builder:lts
             build: >-
               set -e &&
-              apk add libc++-dev libc++-static llvm-libunwind-static &&
-              cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/crtendS.o /usr/lib/ &&
-              cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/crtbeginS.o /usr/lib/ &&
-              cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/crtbeginT.o /usr/lib/ &&
-              cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/crtend.o /usr/lib/ &&
+              apk add libc++-dev libc++-static &&
+              cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/*.o /usr/lib/ &&
               cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/libgcc.a /usr/lib/ &&
               cp /usr/lib/gcc/x86_64-alpine-linux-musl/14.2.0/libgcc_eh.a /usr/lib/ &&
-              rm /usr/lib/libc++.so /usr/lib/libc++.so.1 /usr/lib/libc++.so.1.0 /usr/lib/libc++abi.so /usr/lib/libc++abi.so.1 /usr/lib/libc++abi.so.1.0 &&
-              node ./scripts/build-c++abi.mjs &&
+              wget "https://github.com/Brooooooklyn/canvas/releases/download/libcxxabi-$(cat llvm-version)/libc++abi-x86_64.a" &&
+              mv libc++abi-x86_64.a /usr/lib/libc++abi.a &&
               CXXFLAGS="-std=c++20 -stdlib=libc++ -static -fPIC -fno-cxx-exceptions -fno-exceptions -I/usr/include/c++/v1" CC=clang CXX=clang++ yarn build --target x86_64-unknown-linux-musl
           - host: macos-latest
             downloadTarget: 'aarch64-apple-darwin'
@@ -117,15 +114,25 @@ jobs:
               set -e &&
               rustup target add aarch64-unknown-linux-gnu &&
               yarn build --target aarch64-unknown-linux-gnu
-          - host: ubuntu-latest
+          - host: ubuntu-24.04-arm
             target: 'aarch64-unknown-linux-musl'
             downloadTarget: 'aarch64-unknown-linux-musl'
-            docker: ghcr.io/brooooooklyn/canvas/musl-builder:lts
+            docker: node:18-alpine
             build: >-
               set -e &&
-              rustup target add aarch64-unknown-linux-musl &&
-              unset RUSTFLAGS &&
-              yarn build --target aarch64-unknown-linux-musl
+              apk add musl-dev wget rustup bash python3 git build-base cmake perl clang llvm libc++-dev libc++-static llvm-libunwind-static tar xz ninja &&
+              apk add --no-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing gn perl meson &&
+              wget "https://github.com/Brooooooklyn/canvas/releases/download/libcxxabi-$(cat llvm-version)/libc++abi-aarch64.a" &&
+              mv libc++abi-aarch64.a /usr/lib/libc++abi.a &&
+              cp /usr/lib/gcc/aarch64-alpine-linux-musl/14.2.0/*.o /usr/lib/ &&
+              cp /usr/lib/gcc/aarch64-alpine-linux-musl/14.2.0/libgcc.a /usr/lib/ &&
+              cp /usr/lib/gcc/aarch64-alpine-linux-musl/14.2.0/libgcc_eh.a /usr/lib/ &&
+              export GN_EXE=gn &&
+              rustup-init -y --default-host aarch64-unknown-linux-musl &&
+              source "$HOME/.cargo/env" &&
+              export CXXFLAGS="-std=c++20 -stdlib=libc++ -static -fPIC -fno-cxx-exceptions -fno-exceptions -I/usr/include/c++/v1" &&
+              export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_MUSL_LINKER=aarch64-alpine-linux-musl-gcc &&
+              CC=clang CXX=clang++ yarn build --target aarch64-unknown-linux-musl
           - host: ubuntu-latest
             target: 'armv7-unknown-linux-gnueabihf'
             downloadTarget: 'armv7-unknown-linux-gnueabihf'
