--- a/.gitignore
+++ b/.gitignore
@@ -159,11 +159,14 @@ Temporary Items
 
 # Temporary example image output
 example/*-tmp.*
-# docker temporary files 
+# docker temporary files
 lib
 aom
 
 icudtl.dat
+aarch64-linux-musl-cross
+*.zip
+llvm-project-llvmorg-*
 .pnp.*
 .yarn/*
 !.yarn/patches
