--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -448,7 +448,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['20', '22']
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
 
     steps:
       - uses: actions/checkout@v4
@@ -473,16 +473,7 @@ jobs:
         shell: bash
 
       - name: Install dependencies
-        run: |
-          yarn config set supportedArchitectures.cpu "arm64"
-          yarn config set supportedArchitectures.libc "glibc"
-          yarn install --immutable --mode=skip-build
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+        run: yarn install --immutable --mode=skip-build
 
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
@@ -506,7 +497,7 @@ jobs:
     needs:
       - build
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
 
     steps:
       - uses: actions/checkout@v4
@@ -535,13 +526,6 @@ jobs:
           yarn config set supportedArchitectures.cpu "arm64"
           yarn config set supportedArchitectures.libc "musl"
           yarn install --immutable --mode=skip-build
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: arm64
-
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Setup and run tests
         uses: addnab/docker-run-action@v3
