Fix avif decode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ base64-simd  = "0.8"
 cssparser    = "0.29"
 infer        = "0.19"
 libavif      = { version = "0.14", default-features = false, features = ["codec-aom"] }
+libavif-sys  = { version = "0.17", default-features = false, features = ["codec-aom"] }
 napi         = { version = "3.0.0-alpha.27", default-features = false, features = ["napi4", "web_stream", "serde-json"] }
 napi-derive  = { version = "3.0.0-alpha.25", default-features = false }
 nom          = "8"
