Clippy [skip skia]

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -550,7 +550,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node: ['18', '20', '22']
+        node: ['20', '22']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
