--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde        = "1"
 serde_derive = "1"
 serde_json   = "1"
 thiserror    = "2"
+uuid         = { version = "1", features = ["v4"] }
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 mimalloc = "0.1"
