--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,11 +4,14 @@ rustflags = ["-C", "target-feature=+crt-static"]
 [target.aarch64-apple-darwin]
 rustflags = ["-C", "target-cpu=apple-a14"]
 
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "link-args=-Wl,-z,nodelete"]
+
 [target.aarch64-unknown-linux-gnu]
-rustflags = ["-C", "target-cpu=cortex-a57"]
+rustflags = ["-C", "target-cpu=cortex-a57", "-C", "link-args=-Wl,-z,nodelete"]
 
 [target.armv7-unknown-linux-gnueabihf]
-rustflags = ["-C", "target-cpu=cortex-a7"]
+rustflags = ["-C", "target-cpu=cortex-a7", "-C", "link-args=-Wl,-z,nodelete"]
 
 [target.aarch64-unknown-linux-musl]
 rustflags = ["-C", "target-cpu=cortex-a57"]
