--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 authors = ["LongYinan <lynweklm@gmail.com>"]
-edition = "2021"
+edition = "2024"
 name    = "canvas"
 version = "0.1.0"
+resolver = "3"
 
 [lib]
 crate-type = ["cdylib"]
@@ -26,11 +27,14 @@ serde_json   = "1"
 thiserror    = "2"
 uuid         = { version = "1", features = ["v4"] }
 
-[target.'cfg(not(target_os = "linux"))'.dependencies]
-mimalloc = "0.1"
+[target.'cfg(target_os = "windows")'.dependencies]
+mimalloc = "0.1.45"
+
+[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
+mimalloc-safe = "0.1"
 
 [target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
-mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }
+mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls"] }
 
 [build-dependencies]
 cc         = "1"
