chore: include needed dom types instead of relying on bundled DOM lib
This allows code that depends on @napi-rs/canvas to not include DOM types while typechecking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "allowJs": true,
     "outDir": "dist",
     "sourceMap": true,
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext"]
   },
   "exclude": ["node_modules", "depot_tools", "skia", "skia-c", "example", "target", "npm"]
 }
