--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@napi-rs/canvas",
-  "version": "0.1.69",
+  "version": "0.1.70",
   "description": "Canvas for Node.js with skia backend",
   "main": "index.js",
   "repository": {
@@ -64,7 +64,7 @@
     "postpublish": "pinst --enable",
     "test:ci": "ava -c 1",
     "test": "ava",
-    "version": "napi version && conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
+    "version": "napi version && conventional-changelog -p angular -i CHANGELOG.md -s && git add ."
   },
   "devDependencies": {
     "@jimp/core": "^1.0.0",
