--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,17 +27,14 @@ serde_json   = "1"
 thiserror    = "2"
 uuid         = { version = "1", features = ["v4"] }
 
-[target.'cfg(target_os = "windows")'.dependencies]
-mimalloc = "0.1.45"
-
-[target.'cfg(not(any(target_os = "linux", target_os = "windows")))'.dependencies]
-mimalloc-safe = "0.1"
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+mimalloc-safe = { version = "0.1", features = ["skip_collect_on_exit"] }
 
 [target.'cfg(all(target_os = "linux", not(target_arch = "aarch64")))'.dependencies]
-mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls"] }
+mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls", "skip_collect_on_exit"] }
 
 [target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
-mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls", "no_opt_arch"] }
+mimalloc-safe = { version = "0.1", features = ["local_dynamic_tls", "no_opt_arch", "skip_collect_on_exit"] }
 
 [build-dependencies]
 cc         = "1"
