feat: upgrade cssparser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ crate-type = ["cdylib"]
 [dependencies]
 anyhow       = "1"
 base64-simd  = "0.8"
-cssparser    = "0.29"
+cssparser    = "0.35"
+cssparser-color = "0.3"
 infer        = "0.19"
 libavif      = { version = "0.14", default-features = false, features = ["codec-aom"] }
 libavif-sys  = { version = "0.17", default-features = false, features = ["codec-aom"] }
